# article-backup

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Dockerfile  LICENSE  README.md  backup.py  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt  run-docker.sh
.github/workflows/: docker-publish.yml
article_backup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
site/: build.sh  hugo.toml
site/layouts/_default/: baseof.html  list.html  rss.xml  single.html
site/layouts/_default/_markup/: render-link.html
site/static/css/: reader.css
src/: boosty.py  config.py  database.py  downloader.py  sponsr.py  utils.py
tests/: test_asset_dedup.py  test_boosty_empty_link.py  test_boosty_normalize.py  test_config_hardening.py  test_incremental_sync.py  test_slug_safety.py  test_sponsr_formatting_fix.py  test_sponsr_normalize.py  test_sponsr_tags.py  test_video_embed.py
