[project]
name = "article-backup"
version = "0.1.0"
description = "Локальный бэкап статей с Sponsr.ru и Boosty.to"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "html2text",
    "python-slugify",
    "pyyaml",
]

[project.scripts]
backup = "backup:main"
